--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Trello</title>
+  <!-- Íconos -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+    crossorigin="anonymous">
+  <!-- Tipografías -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
+  <!-- Estilos -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  
+  <!-- <i class="fab fa-trello"> logo trello -->
+  <!-- <i class="far fa-star"></i> icono estrella -->
+  <div class="container-fluid">
+    <header class="row">
+      <div class="dropdown">
+        <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fab fa-trello"></i>Tableros
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </div>
+      <div class="input-group">
+        <input id="search" type="text" class="form-control" aria-describedby="basic-addon2">
+        <span id="basic-addon2">
+          <i class="fas fa-search"></i>
+      </div>
+      <img id="logo" src="img/trello-logo-white-1024x315.png" alt="logo Trello">
+    </header>
+    <section class="board">
+      <div class="board-header">
+        <h5>Nombre tablero</h5>
+        <i class="far fa-star"></i>
+        <p>Personal</p>
+      </div>
+      <div class="board-body">
+        <div id="first" class="col-4">
+          <button id="addList" type="button" class="btn btn-light">
+            <i class="fas fa-plus"></i>Añadir una lista</button>
+          <div id="inputList" class="formContainer d-none">
+            <form>
+              <input type="text" class="form-control" id="listText" placeholder="Introduzca el título de la lista">
+              <button type="submit" class="btn btn-success">Añadir lista</button>
+              <button id="close">
+                <i class="fas fa-times"></i>
+              </button>
+            </form>
+          </div>
+        </div>
+        <div id="second" class="col-4">
+        </div>
+        <div id="third" class="col-4">
+        </div>
+      </div>
+    </section>
+
+
+
+  </div>
+
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
 </body>
+
 </html>
