--- a/src/index.html
+++ b/src/index.html
@@ -91,12 +91,10 @@
         </div>
         <div id="third" class="col">
         </div>
+        <div id="fourth" class="col">
+        </div>
       </div>
     </section>
-
-    
-
-
   </div>
 
 
