--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <button class="btn">
           <i class="fas fa-plus"></i>
         </button>
-        <button class="btn">
+        <button id="info" class="btn">
           <i class="fas fa-info-circle"></i>
         </button>
         <button id="notification" class="btn">
