--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
           <div id="inputList" class="formContainer d-none">
             <input type="text" class="form-control" id="listText" placeholder="Introduzca el título de la lista...">
             <button id="addBtn" type="button" class="btn btn-success" onclick="newList()">Añadir lista</button>
-            <button id="close" class="btn" onclick="close()">
+            <button id="close" class="btn" onclick="closeList()">
               <i class="fas fa-times"></i>
             </button>
           </div>
