--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <div class="container-fluid">
     <header class="row">
       <div class="dropdown">
-        <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="btn blue-btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fab fa-trello"></i>Tableros
         </a>
         <div class="dropdown-menu boards-drawer" aria-labelledby="dropdownMenuLink">
@@ -52,13 +52,13 @@
       </div>
         <img id="logo" src="img/trello-logo-white-1024x315.png" alt="logo Trello">
       <div class="button-group">
-        <button class="btn">
+        <button class="btn blue-btn">
           <i class="fas fa-plus"></i>
         </button>
-        <button id="info" class="btn">
+        <button id="info" class="btn blue-btn">
           <i class="fas fa-info-circle"></i>
         </button>
-        <button id="notification" class="btn">
+        <button id="notification" class="btn blue-btn">
           <i class="far fa-bell"></i>
         </button>
         <button class="btn user">
@@ -68,33 +68,33 @@
     </header>
     <section class="board">
       <div class="board-header row">
-        <button class="btn ">Nombre tablero</button>
-        <button class="btn starBtn">
+        <button class="btn blue-btn">Nombre tablero</button>
+        <button class="btn starBtn blue-btn">
           <i class="far fa-star"></i>
         </button>
         <div class="vl"></div>
-        <button class="btn">Personal</button>
+        <button class="btn blue-btn">Personal</button>
         <div class="vl"></div>
-        <button class="btn private">
+        <button class="btn private blue-btn">
           <i class="fas fa-lock"></i>Privado</button>
         <div class="vl"></div>
-        <button class="btn user-board">
+        <button class="btn user-board blue-btn">
           <i class="far fa-user-circle"></i>
         </button>
-        <button class="btn user-board">
+        <button class="btn user-board blue-btn">
           <i class="fas fa-user-plus"></i>
         </button>
-        <button id="menu" class="btn private">
+        <button id="menu" class="btn private blue-btn">
           <i class="fas fa-ellipsis-h"></i>Mostrar menú</button>
       </div>
       <div id="boardBody" class="board-body row">
         <div id="list">
-          <button id="addList" type="button" class="btn">
+          <button id="addList" type="button" class="btn add-btn">
             <i class="fas fa-plus"></i>Añadir una lista</button>
           <div id="inputList" class="formContainer d-none">
             <input type="text" class="form-control" id="listTitle" placeholder="Introduzca el título de la lista...">
-            <button id="addNewListBtn" type="button" class="btn btn-success">Añadir lista</button>
-            <button id="closeBtn" class="btn">
+            <button id="addNewListBtn" type="button" class="btn green-btn">Añadir lista</button>
+            <button id="closeBtn" class="btn cancel-btn">
               <i class="fas fa-times"></i>
             </button>
           </div>
