--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <header class="row">
       <div class="dropdown">
         <a class="btn blue-btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fab fa-trello"></i>Tableros
+          <i class="fab fa-trello"></i><span>Tableros</span>
         </a>
         <div class="dropdown-menu boards-drawer" aria-labelledby="dropdownMenuLink">
           <input class="js-search-boards" type="text" name="search-boards" placeholder="Buscar tableros por nombre…">
